La till koden från början av demon

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello from the other side
+<!DOCTYPE html>
+<html Lang "eng">
+<head> </head>
+    <meta charset=""UTF-8">
+    <meta name_"viewport" content="width=device-width"
+    <title>Demo</title>
+</head>
+<body></body>
