--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <meta name_"viewport" content="width=device-width"
 
 </head>
-            <h1>Välkommen</h1>
+<h1 style="color: red">Välkommen</h1>
 <body></body>
