--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head> </head>
     <meta charset=""UTF-8">
     <meta name_"viewport" content="width=device-width"
-
+    <style> 
+        h1 {color: blue; font-family: helvetica}</style>
 </head>
-<h1 style="color: red">Välkommen</h1>
+<h1>Välkommen</h1>
 <body></body>
