--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> </head>
     <meta charset=""UTF-8">
     <meta name_"viewport" content="width=device-width"
+    <title>Demo</title>
     <style>
         h1 { color: blue; font-family: helvetica}</style>
 </head>
