--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html Lang "eng">
-<head> </head>
+<head>
     <meta charset=""UTF-8">
     <meta name_"viewport" content="width=device-width"
     <title>Demo</title>
