Gjorde lite space

--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html Lang "eng">
 <head>
     <meta charset=""UTF-8">
-    <meta name_"viewport" content="width=device-width"
+    <meta name_"viewport" content="width=device-width">
     <title>Demo</title>
     <style>
         h1 { color: blue; font-family: helvetica}</style>
 </head>
+<body>
 <h1>Välkommen</h1>
-<body></body>
+
+
+
+
+
+
+</body>
+</html>
