--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name_"viewport" content="width=device-width">
     <title>Demo</title>
     <style>
-        h1 { color: blue; font-family: helvetica}</style>
+        h1 { color: blue; font-family: helvetica}
+    </style>
 </head>
 <body>
-<h1>Välkommen</h1>
-
+<h1>Välkommen :)</h1>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui excepturi suscipit vel, cupiditate possimus ut nemo eligendi animi veniam deserunt sed adipisci eaque recusandae, libero nobis, facere officiis voluptas facilis?</p>
 
 
 
