--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-<h1>Välkommen :)</h1>
+<h1>Välkommen!!!</h1>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui excepturi suscipit vel, cupiditate possimus ut nemo eligendi animi veniam deserunt sed adipisci eaque recusandae, libero nobis, facere officiis voluptas facilis?</p>
 
 
