--- a/test labb.html
+++ b/test labb.html
@@ -5,6 +5,11 @@
     <body>
         <H1>Rubrik</H1>
         <p>Detta är ett stycke</p>
+        <ul>
+            <li>Apelsin</li>
+            <li>Banan</li>
+            <li>Citron</li>
+        </ul>
     </body>
 
 
