La till CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 <body>
 <h1>Välkommen!!!</h1>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui excepturi suscipit vel, cupiditate possimus ut nemo eligendi animi veniam deserunt sed adipisci eaque recusandae, libero nobis, facere officiis voluptas facilis?</p>
-
-
-
-
+<p>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui excepturi suscipit vel, cupiditate possimus ut nemo eligendi animi veniam deserunt sed adipisci eaque recusandae, libero nobis, facere officiis voluptas facilis?</p>
 
 </body>
 </html>
