Tog bort "style" från HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html Lang "eng">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset=""UTF-8">
     <meta name_"viewport" content="width=device-width">
     <title>Demo</title>
-    <style>
-        h1 { color: blue; font-family: helvetica}
-    </style>
 </head>
 <body>
 <h1>Välkommen!!!</h1>
