--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Demo</title>
 </head>
 <body>
-<h1>Välkommen!!!</h1>
+<h1>Peaches</h1>
 <p>
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui excepturi suscipit vel.</p>
-
+Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in the center.</p>
+<img src="Images/peach.png" width="800px"> 
+<img src="Images/peach-slice.png" width="400px"> 
+<p>
+Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth.</p>
 </body>
 </html>
