--- a/v.1/index.html
+++ b/v.1/index.html
@@ -6,13 +6,21 @@
     <meta name_"viewport" content="width=device-width">
     <title>Demo</title>
 </head>
+
 <body>
 <h1>Peaches</h1>
+<h2>
+Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in the center.</h2>
+
+<div class="page-wrapper"> 
+<div class="image-container" >
+<img src="Images/peach.png" width="400px"> 
+<img src="Images/peach-slice.png" width="200px"> 
+</div>
+</div>
+
 <p>
-Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in the center.</p>
-<img src="Images/peach.png" width="800px"> 
-<img src="Images/peach-slice.png" width="400px"> 
-<p>
-Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth.</p>
+Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth. Peaches continue to ripen after they have been picked. Unripe fruit can be ripened at room temperature, and once ripe, should be refrigerated to prolong freshness. </p>
+<button type="button" class="btn btn-primary">Primary</button> 
 </body>
 </html>
