--- a/v.1/index.html
+++ b/v.1/index.html
@@ -21,6 +21,7 @@ Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in t
 
 <p>
 Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth. Peaches continue to ripen after they have been picked. Unripe fruit can be ripened at room temperature, and once ripe, should be refrigerated to prolong freshness. </p>
-<button type="button" class="btn btn-primary">Primary</button> 
+<button type="button" class="button-primary">Learn more about peaches</button> 
+
 </body>
 </html>
