--- a/v.1/index.html
+++ b/v.1/index.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
-<html Lang "eng">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset=""UTF-8">
-    <meta name_"viewport" content="width=device-width">
-    <title>Demo</title>
-</head>
+<html Lang="en">
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Demo</title>
+    </head>
 
-<body>
-<h1>Peaches</h1>
-<h2>
-Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in the center.</h2>
+    <body>
+        
+    <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-light text-decoration-none">
+        <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg> -->
+        <img src="Images/peach.png" width="40px">
+        <span class="fs-4">Sweetpeach.com</span>
+      </a>
 
-<div class="page-wrapper"> 
-<div class="image-container" >
-<img src="Images/peach.png" width="400px"> 
-<img src="Images/peach-slice.png" width="200px"> 
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item">
+<div class="dropdown">
+  <button class="dropbtn">Fruits</button>
+<div class="dropdown-content">
+    <ul class="dropdown-menu position-static d-grid gap-1 p-2 rounded-3 mx-0 shadow w-220px">
+   
+    <li><a class="dropdown-item rounded-2" href="#">Peaches</a></li>
+        <li><a class="dropdown-item rounded-2" href="#">Strawberries</a></li>
+    <li><a class="dropdown-item rounded-2" href="#">Blueberries</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item rounded-2" href="#">All fruits</a></li>
+  </ul>
 </div>
 </div>
+        </li>
+        <li class="nav-item"><a href="#" class="nav-link">Recipes</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </header>
+  </div>
 
-<p>
-Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth. Peaches continue to ripen after they have been picked. Unripe fruit can be ripened at room temperature, and once ripe, should be refrigerated to prolong freshness. </p>
-<button type="button" class="button-primary">Learn more about peaches</button> 
 
-</body>
+        <h1>Peaches</h1>
+        <h2>
+        Peaches are juicy, sweet stone fruits with a fuzzy or smooth skin and a pit in the center.</h2>
+
+        <div class="page-wrapper"> 
+        <div class="image-container" >
+        <img src="Images/peach.png" width="400px"> 
+        <img src="Images/peach-slice.png" width="200px"> 
+        </div>
+        </div>
+
+        <p>
+        Peaches have a round shape with a cleft on one side. Their flesh can be white, yellow, or red, and their skin can be fuzzy or smooth. Peaches continue to ripen after they have been picked. Unripe fruit can be ripened at room temperature, and once ripe, should be refrigerated to prolong freshness. 
+        </p>
+        <button type="button" class="button-primary"><a href="https://sv.wikipedia.org/wiki/Persika">Learn more about peaches</a></button> 
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    </body>
 </html>
